[gd_scene load_steps=13 format=2]

[ext_resource path="res://MYGAMESPRITES/stuff/Ground.png" type="Texture" id=1]
[ext_resource path="res://tileset1.tres" type="TileSet" id=2]
[ext_resource path="res://MYGAMESPRITES/stuff/done/WallsDone2.png" type="Texture" id=3]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Hole_Ener.tscn" type="PackedScene" id=5]
[ext_resource path="res://Hole_Ener4.gd" type="Script" id=6]
[ext_resource path="res://BadGuys/Slime.tscn" type="PackedScene" id=7]
[ext_resource path="res://BadGuys/Bat.tscn" type="PackedScene" id=8]
[ext_resource path="res://BadGuys/Armor_Slime.tscn" type="PackedScene" id=9]
[ext_resource path="res://World_4.gd" type="Script" id=10]
[ext_resource path="res://HP.tscn" type="PackedScene" id=11]

[sub_resource type="TileSet" id=1]
0/name = "WallsDone2.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( -32, 0, 224, 160 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 1, 1 ), 432, Vector2( 1, 2 ), 438, Vector2( 1, 3 ), 54, Vector2( 1, 4 ), 48, Vector2( 2, 1 ), 504, Vector2( 2, 2 ), 511, Vector2( 2, 3 ), 63, Vector2( 2, 4 ), 56, Vector2( 3, 1 ), 216, Vector2( 3, 2 ), 219, Vector2( 3, 3 ), 27, Vector2( 3, 4 ), 24, Vector2( 4, 0 ), 176, Vector2( 4, 1 ), 16, Vector2( 4, 2 ), 144, Vector2( 4, 3 ), 146, Vector2( 4, 4 ), 18, Vector2( 5, 0 ), 255, Vector2( 5, 1 ), 507, Vector2( 5, 2 ), 248, Vector2( 5, 3 ), 510, Vector2( 5, 4 ), 440, Vector2( 6, 0 ), 447, Vector2( 6, 1 ), 510, Vector2( 6, 2 ), 152, Vector2( 6, 3 ), 50, Vector2( 6, 4 ), 26 ]
0/autotile/icon_coordinate = Vector2( 4, 1 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="World_4" type="Node2D"]
script = ExtResource( 10 )

[node name="Ground" type="Sprite" parent="."]
position = Vector2( 152, 96 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 690, 630 )

[node name="YSort" type="YSort" parent="."]

[node name="BossDoor" type="TileMap" parent="YSort"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -65533, 0, 65539, -65531, 1610612738, 3, -65530, 0, 65539, 0, 0, 65539, 327684, 0, 262144, 327685, 0, 262146 )

[node name="StaticBody2D" type="StaticBody2D" parent="YSort/BossDoor"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="YSort/BossDoor/StaticBody2D"]
polygon = PoolVector2Array( 32, 0, 32, 32, 0, 32, 0, 0 )

[node name="Walls" type="TileMap" parent="YSort"]
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -589834, 0, 65537, -589833, 0, 65538, -589832, 0, 65538, -589831, 0, 65538, -589830, 0, 65538, -589829, 0, 65538, -589828, 0, 65538, -589827, 0, 65538, -589826, 0, 65538, -589825, 0, 65538, -655360, 0, 65538, -655359, 0, 65538, -655358, 0, 65538, -655357, 0, 65538, -655356, 0, 65538, -655355, 0, 65538, -655354, 0, 65538, -655353, 0, 65538, -655352, 0, 65538, -655351, 0, 65538, -655350, 0, 65538, -655349, 0, 65538, -655348, 0, 65538, -655347, 0, 65538, -655346, 0, 65538, -655345, 0, 65538, -655344, 0, 65538, -655343, 0, 65538, -655342, 0, 65538, -655341, 0, 65539, -524298, 0, 131073, -524297, 0, 131074, -524296, 0, 131074, -524295, 0, 131074, -524294, 0, 131074, -524293, 0, 131074, -524292, 0, 131074, -524291, 0, 131074, -524290, 0, 131074, -524289, 0, 131074, -589824, 0, 131074, -589823, 0, 131074, -589822, 0, 131074, -589821, 0, 131074, -589820, 0, 131074, -589819, 0, 131074, -589818, 0, 131074, -589817, 0, 131074, -589816, 0, 131074, -589815, 0, 131074, -589814, 0, 131074, -589813, 0, 131074, -589812, 0, 131074, -589811, 0, 131074, -589810, 0, 131074, -589809, 0, 131074, -589808, 0, 131074, -589807, 0, 131074, -589806, 0, 131074, -589805, 0, 131075, -458762, 0, 131073, -458761, 0, 131074, -458760, 0, 131074, -458759, 0, 131074, -458758, 0, 131074, -458757, 0, 131074, -458756, 0, 131074, -458755, 0, 131074, -458754, 0, 131074, -458753, 0, 131074, -524288, 0, 131074, -524287, 0, 131074, -524286, 0, 131074, -524285, 0, 131074, -524284, 0, 131074, -524283, 0, 131074, -524282, 0, 131074, -524281, 0, 131074, -524280, 0, 131074, -524279, 0, 131074, -524278, 0, 131074, -524277, 0, 131074, -524276, 0, 131074, -524275, 0, 131074, -524274, 0, 131074, -524273, 0, 131074, -524272, 0, 131074, -524271, 0, 131074, -524270, 0, 131074, -524269, 0, 131075, -393226, 0, 131073, -393225, 0, 131074, -393224, 0, 131074, -393223, 0, 131074, -393222, 0, 5, -393221, 0, 196610, -393220, 0, 196610, -393219, 0, 196610, -393218, 0, 196610, -393217, 0, 196610, -458752, 0, 196610, -458751, 0, 196610, -458750, 0, 196610, -458749, 0, 196610, -458748, 0, 196610, -458747, 0, 196610, -458746, 0, 196610, -458745, 0, 196610, -458744, 0, 6, -458743, 0, 131074, -458742, 0, 131074, -458741, 0, 131074, -458740, 0, 5, -458739, 0, 196610, -458738, 0, 196610, -458737, 0, 6, -458736, 0, 131074, -458735, 0, 131074, -458734, 0, 131074, -458733, 0, 131075, -327690, 0, 131073, -327689, 0, 131074, -327688, 0, 131074, -327687, 0, 131074, -327686, 0, 131075, -393208, 0, 196609, -393207, 0, 196610, -393206, 0, 196610, -393205, 0, 6, -393204, 0, 131075, -393201, 0, 131073, -393200, 0, 131074, -393199, 0, 131074, -393198, 0, 131074, -393197, 0, 131075, -262154, 0, 131073, -262153, 0, 131074, -262152, 0, 131074, -262151, 0, 131074, -262150, 0, 131075, -262147, 0, 65537, -262146, 0, 65538, -262145, 0, 65538, -327680, 0, 65539, -327669, 0, 131073, -327668, 0, 131075, -327665, 0, 131073, -327664, 0, 131074, -327663, 0, 131074, -327662, 0, 131074, -327661, 0, 131075, -196618, 0, 131073, -196617, 0, 131074, -196616, 0, 131074, -196615, 0, 131074, -196614, 0, 131075, -196611, 0, 196609, -196610, 0, 196610, -196609, 0, 6, -262144, 0, 65541, -262143, 0, 65538, -262142, 0, 65538, -262141, 0, 65538, -262140, 0, 65538, -262139, 0, 65538, -262138, 0, 65538, -262137, 0, 65538, -262136, 0, 65538, -262135, 0, 65539, -262133, 0, 131073, -262132, 0, 131075, -262129, 0, 131073, -262128, 0, 131074, -262127, 0, 131074, -262126, 0, 131074, -262125, 0, 131075, -131082, 0, 131073, -131081, 0, 131074, -131080, 0, 131074, -131079, 0, 131074, -131078, 0, 131075, -131073, 0, 196609, -196608, 0, 196610, -196607, 0, 196610, -196606, 0, 196610, -196605, 0, 6, -196604, 0, 131074, -196603, 0, 131074, -196602, 0, 5, -196601, 0, 196610, -196600, 0, 196610, -196599, 0, 196611, -196597, 0, 131073, -196596, 0, 131075, -196593, 0, 131073, -196592, 0, 131074, -196591, 0, 131074, -196590, 0, 131074, -196589, 0, 131075, -65546, 0, 131073, -65545, 0, 131074, -65544, 0, 131074, -65543, 0, 131074, -65542, 0, 65541, -65541, 0, 65538, -65540, 0, 65538, -65539, 0, 65539, -131069, 0, 196609, -131068, 0, 6, -131067, 0, 5, -131066, 0, 196611, -131061, 0, 196609, -131060, 0, 196611, -131057, 0, 131073, -131056, 0, 131074, -131055, 0, 131074, -131054, 0, 131074, -131053, 0, 131075, -10, 0, 131073, -9, 0, 131074, -8, 0, 131074, -7, 0, 131074, -6, 0, 5, -5, 0, 196610, -4, 0, 6, -3, 0, 65541, -2, 0, 65539, -65536, 0, 262145, -65535, 0, 262146, -65534, 0, 262147, -65532, 0, 196609, -65531, 0, 196611, -65529, 0, 262145, -65528, 0, 262146, -65527, 0, 131078, -65521, 0, 131073, -65520, 0, 131074, -65519, 0, 131074, -65518, 0, 131074, -65517, 0, 131075, 65526, 0, 131073, 65527, 0, 131074, 65528, 0, 131074, 65529, 0, 131074, 65530, 0, 131075, 65532, 0, 196609, 65533, 0, 6, 65534, 0, 131075, 9, 0, 196612, 15, 0, 131073, 16, 0, 131074, 17, 0, 131074, 18, 0, 131074, 19, 0, 131075, 131062, 0, 131073, 131063, 0, 131074, 131064, 0, 131074, 131065, 0, 131074, 131066, 0, 131075, 131069, 0, 131073, 131070, 0, 65541, 131071, 0, 65538, 65536, 0, 65539, 65545, 0, 196612, 65551, 0, 131073, 65552, 0, 131074, 65553, 0, 131074, 65554, 0, 131074, 65555, 0, 131075, 196598, 0, 131073, 196599, 0, 131074, 196600, 0, 131074, 196601, 0, 131074, 196602, 0, 131075, 196605, 0, 196609, 196606, 0, 6, 196607, 0, 131074, 131072, 0, 131075, 131081, 0, 196612, 131087, 0, 131073, 131088, 0, 131074, 131089, 0, 131074, 131090, 0, 131074, 131091, 0, 131075, 262134, 0, 131073, 262135, 0, 131074, 262136, 0, 131074, 262137, 0, 131074, 262138, 0, 131075, 262142, 0, 131073, 262143, 0, 131074, 196608, 0, 131075, 196617, 0, 196612, 196623, 0, 131073, 196624, 0, 131074, 196625, 0, 131074, 196626, 0, 131074, 196627, 0, 131075, 327670, 0, 131073, 327671, 0, 131074, 327672, 0, 131074, 327673, 0, 131074, 327674, 0, 131075, 327678, 0, 196609, 327679, 0, 6, 262144, 0, 131075, 262153, 0, 196612, 262159, 0, 131073, 262160, 0, 131074, 262161, 0, 131074, 262162, 0, 131074, 262163, 0, 131075, 393206, 0, 131073, 393207, 0, 131074, 393208, 0, 131074, 393209, 0, 131074, 393210, 0, 131075, 393215, 0, 196609, 327680, 0, 65540, 327681, 0, 262146, 327682, 0, 262146, 327683, 0, 262147, 327686, 0, 262145, 327687, 0, 262146, 327688, 0, 262146, 327689, 0, 262150, 327695, 0, 131073, 327696, 0, 131074, 327697, 0, 131074, 327698, 0, 131074, 327699, 0, 131075, 458742, 0, 131073, 458743, 0, 131074, 458744, 0, 131074, 458745, 0, 131074, 458746, 0, 131075, 458748, 0, 65537, 458749, 0, 65539, 393231, 0, 131073, 393232, 0, 131074, 393233, 0, 131074, 393234, 0, 131074, 393235, 0, 131075, 524278, 0, 131073, 524279, 0, 131074, 524280, 0, 131074, 524281, 0, 131074, 524282, 0, 131075, 524284, 0, 196609, 524285, 0, 196611, 524287, 0, 65537, 458752, 0, 131077, 458753, 0, 262146, 458754, 0, 262147, 458758, 0, 4, 458759, 0, 262146, 458760, 0, 262149, 458761, 0, 65539, 458767, 0, 131073, 458768, 0, 131074, 458769, 0, 131074, 458770, 0, 131074, 458771, 0, 131075, 589814, 0, 131073, 589815, 0, 131074, 589816, 0, 131074, 589817, 0, 131074, 589818, 0, 131075, 589822, 0, 65537, 589823, 0, 196613, 524288, 0, 131075, 524294, 0, 262148, 524296, 0, 131073, 524297, 0, 65541, 524298, 0, 65538, 524299, 0, 65538, 524300, 0, 65539, 524303, 0, 131073, 524304, 0, 131074, 524305, 0, 131074, 524306, 0, 131074, 524307, 0, 131075, 655350, 0, 131073, 655351, 0, 131074, 655352, 0, 131074, 655353, 0, 131074, 655354, 0, 131075, 655358, 0, 131073, 655359, 0, 131074, 589824, 0, 65541, 589825, 0, 65539, 589832, 0, 196609, 589833, 0, 196610, 589834, 0, 196610, 589835, 0, 196610, 589836, 0, 196611, 589839, 0, 131073, 589840, 0, 131074, 589841, 0, 131074, 589842, 0, 131074, 589843, 0, 131075, 720886, 0, 131073, 720887, 0, 131074, 720888, 0, 131074, 720889, 0, 131074, 720890, 0, 131075, 720894, 0, 131073, 720895, 0, 131074, 655360, 0, 131074, 655361, 0, 65541, 655362, 0, 131077, 655363, 0, 262147, 655373, 0, 262145, 655374, 0, 262149, 655375, 0, 196613, 655376, 0, 131074, 655377, 0, 131074, 655378, 0, 131074, 655379, 0, 131075, 786422, 0, 131073, 786423, 0, 131074, 786424, 0, 131074, 786425, 0, 131074, 786426, 0, 131075, 786430, 0, 131073, 786431, 0, 131074, 720896, 0, 131074, 720897, 0, 131074, 720898, 0, 131075, 720901, 0, 65537, 720902, 0, 65538, 720903, 0, 65539, 720910, 0, 131073, 720911, 0, 131074, 720912, 0, 131074, 720913, 0, 131074, 720914, 0, 131074, 720915, 0, 131075, 851958, 0, 131073, 851959, 0, 131074, 851960, 0, 131074, 851961, 0, 131074, 851962, 0, 65541, 851963, 0, 65538, 851964, 0, 65538, 851965, 0, 65538, 851966, 0, 196613, 851967, 0, 131074, 786432, 0, 131074, 786433, 0, 131074, 786434, 0, 65541, 786435, 0, 65538, 786436, 0, 65538, 786437, 0, 65542, 786438, 0, 131074, 786439, 0, 65541, 786440, 0, 65538, 786441, 0, 65538, 786442, 0, 65538, 786443, 0, 65538, 786444, 0, 65538, 786445, 0, 65538, 786446, 0, 196613, 786447, 0, 131074, 786448, 0, 131074, 786449, 0, 131074, 786450, 0, 131074, 786451, 0, 131075, 917494, 0, 131073, 917495, 0, 131074, 917496, 0, 131074, 917497, 0, 131074, 917498, 0, 131074, 917499, 0, 131074, 917500, 0, 131074, 917501, 0, 131074, 917502, 0, 131074, 917503, 0, 131074, 851968, 0, 131074, 851969, 0, 131074, 851970, 0, 131074, 851971, 0, 131074, 851972, 0, 131074, 851973, 0, 131074, 851974, 0, 131074, 851975, 0, 131074, 851976, 0, 131074, 851977, 0, 131074, 851978, 0, 131074, 851979, 0, 131074, 851980, 0, 131074, 851981, 0, 131074, 851982, 0, 131074, 851983, 0, 131074, 851984, 0, 131074, 851985, 0, 131074, 851986, 0, 131074, 851987, 0, 131075, 983030, 0, 131073, 983031, 0, 131074, 983032, 0, 131074, 983033, 0, 131074, 983034, 0, 131074, 983035, 0, 131074, 983036, 0, 131074, 983037, 0, 131074, 983038, 0, 131074, 983039, 0, 131074, 917504, 0, 131074, 917505, 0, 131074, 917506, 0, 131074, 917507, 0, 131074, 917508, 0, 131074, 917509, 0, 131074, 917510, 0, 131074, 917511, 0, 131074, 917512, 0, 131074, 917513, 0, 131074, 917514, 0, 131074, 917515, 0, 131074, 917516, 0, 131074, 917517, 0, 131074, 917518, 0, 131074, 917519, 0, 131074, 917520, 0, 131074, 917521, 0, 131074, 917522, 0, 131074, 917523, 0, 131075, 1048566, 0, 196609, 1048567, 0, 196610, 1048568, 0, 196610, 1048569, 0, 196610, 1048570, 0, 196610, 1048571, 0, 196610, 1048572, 0, 196610, 1048573, 0, 196610, 1048574, 0, 196610, 1048575, 0, 196610, 983040, 0, 196610, 983041, 0, 196610, 983042, 0, 196610, 983043, 0, 196610, 983044, 0, 196610, 983045, 0, 196610, 983046, 0, 196610, 983047, 0, 196610, 983048, 0, 196610, 983049, 0, 196610, 983050, 0, 196610, 983051, 0, 196610, 983052, 0, 196610, 983053, 0, 196610, 983054, 0, 196610, 983055, 0, 196610, 983056, 0, 196610, 983057, 0, 196610, 983058, 0, 196610, 983059, 0, 196611 )

[node name="StaticBody2D" type="StaticBody2D" parent="YSort/Walls"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="YSort/Walls/StaticBody2D"]
polygon = PoolVector2Array( 640, 512, -320, 512, -320, -320, 640, -320, 640, 448, 480, 384, 480, -192, -160, -192, -160, 384, 480, 384, 640, 448 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="YSort/Walls/StaticBody2D"]
polygon = PoolVector2Array( 96, 384, 96, 352, 128, 352, 128, 320, 64, 320, 64, 288, 32, 288, 32, 256, 96, 256, 96, 224, -32, 224, -32, 256, -64, 256, -64, 384 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="YSort/Walls/StaticBody2D"]
polygon = PoolVector2Array( 160, 384, 160, 352, 256, 352, 256, 384 )

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="YSort/Walls/StaticBody2D"]
polygon = PoolVector2Array( -64, 256, -64, 192, -128, 192, -128, 256 )

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="YSort/Walls/StaticBody2D"]
polygon = PoolVector2Array( 480, 320, 416, 320, 416, 352, 448, 352, 448, 384, 480, 384 )

[node name="CollisionPolygon2D7" type="CollisionPolygon2D" parent="YSort/Walls/StaticBody2D"]
polygon = PoolVector2Array( 416, 320, 416, 256, 320, 256, 320, 224, 192, 224, 192, 288, 224, 288, 224, 256, 256, 256, 256, 320 )

[node name="CollisionPolygon2D8" type="CollisionPolygon2D" parent="YSort/Walls/StaticBody2D"]
polygon = PoolVector2Array( 416, -32, 352, -32, 352, -160, 256, -160, 256, -192, 416, -192 )

[node name="CollisionPolygon2D9" type="CollisionPolygon2D" parent="YSort/Walls/StaticBody2D"]
polygon = PoolVector2Array( -160, 0, -128, 0, -128, 32, -96, 32, -96, 96, -64, 96, -64, 160, -32, 160, -32, 192, 320, 192, 320, -32, 224, -32, 224, -64, 320, -64, 320, -128, 32, -128, 32, -160, -96, -160, -96, -96, -32, -96, -32, -64, 96, -64, 96, -32, 0, -32, 0, 0, 288, 0, 288, 160, 32, 160, 32, 32, -32, 32, -32, -32, -64, -32, -64, -64, -160, -64 )

[node name="YSort2" type="YSort" parent="."]

[node name="Player" parent="YSort2" instance=ExtResource( 4 )]
position = Vector2( -125, 349 )
collision_mask = 15

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="YSort2/Player"]
remote_path = NodePath("../../../Camera2D")

[node name="Hole_Ener4" parent="YSort2" instance=ExtResource( 5 )]
position = Vector2( 264, 16 )
script = ExtResource( 6 )

[node name="Hole" parent="YSort2/Hole_Ener4" index="0"]
visible = false

[node name="CollisionPolygon2D" parent="YSort2/Hole_Ener4" index="1"]
disabled = true

[node name="YSort" type="YSort" parent="YSort2"]

[node name="Bat" parent="YSort2/YSort" instance=ExtResource( 8 )]
position = Vector2( -132, 69 )

[node name="Bat15" parent="YSort2/YSort" instance=ExtResource( 8 )]
position = Vector2( 198, 102 )
scale = Vector2( 3, 3 )

[node name="Bat2" parent="YSort2/YSort" instance=ExtResource( 8 )]
position = Vector2( 84, 293 )

[node name="Bat3" parent="YSort2/YSort" instance=ExtResource( 8 )]
position = Vector2( 207, 331 )

[node name="Bat4" parent="YSort2/YSort" instance=ExtResource( 8 )]
position = Vector2( 337, 361 )

[node name="Bat5" parent="YSort2/YSort" instance=ExtResource( 8 )]
position = Vector2( 382, 187 )

[node name="Bat6" parent="YSort2/YSort" instance=ExtResource( 8 )]
position = Vector2( 435, 129 )

[node name="Bat7" parent="YSort2/YSort" instance=ExtResource( 8 )]
position = Vector2( 374, 97 )

[node name="Bat8" parent="YSort2/YSort" instance=ExtResource( 8 )]
position = Vector2( 453, -22 )

[node name="Bat9" parent="YSort2/YSort" instance=ExtResource( 8 )]
position = Vector2( 453, -149 )

[node name="Bat10" parent="YSort2/YSort" instance=ExtResource( 8 )]
position = Vector2( 213, -154 )

[node name="Bat11" parent="YSort2/YSort" instance=ExtResource( 8 )]
position = Vector2( 67, -165 )

[node name="Bat12" parent="YSort2/YSort" instance=ExtResource( 8 )]
position = Vector2( 67, -54 )

[node name="Bat13" parent="YSort2/YSort" instance=ExtResource( 8 )]
position = Vector2( 255, -44 )

[node name="Bat14" parent="YSort2/YSort" instance=ExtResource( 8 )]
position = Vector2( -81, 137 )

[node name="YSort2" type="YSort" parent="YSort2"]

[node name="Slime" parent="YSort2/YSort2" instance=ExtResource( 7 )]
position = Vector2( -122, 143 )

[node name="Slime2" parent="YSort2/YSort2" instance=ExtResource( 7 )]
position = Vector2( 287, 333 )

[node name="Slime3" parent="YSort2/YSort2" instance=ExtResource( 7 )]
position = Vector2( 149, 276 )

[node name="Slime4" parent="YSort2/YSort2" instance=ExtResource( 7 )]
position = Vector2( 452, 281 )

[node name="Slime5" parent="YSort2/YSort2" instance=ExtResource( 7 )]
position = Vector2( 392, 29 )

[node name="Slime6" parent="YSort2/YSort2" instance=ExtResource( 7 )]
position = Vector2( 131, -150 )

[node name="Slime7" parent="YSort2/YSort2" instance=ExtResource( 7 )]
position = Vector2( -129, -89 )

[node name="YSort3" type="YSort" parent="YSort2"]

[node name="Armor_Slime" parent="YSort2/YSort3" instance=ExtResource( 9 )]
position = Vector2( -45, 228 )

[node name="Armor_Slime2" parent="YSort2/YSort3" instance=ExtResource( 9 )]
position = Vector2( 141, 223 )

[node name="Armor_Slime3" parent="YSort2/YSort3" instance=ExtResource( 9 )]
position = Vector2( 452, 181 )

[node name="Armor_Slime4" parent="YSort2/YSort3" instance=ExtResource( 9 )]
position = Vector2( 335, -157 )

[node name="Armor_Slime5" parent="YSort2/YSort3" instance=ExtResource( 9 )]
position = Vector2( -114, -167 )

[node name="Armor_Slime6" parent="YSort2/YSort3" instance=ExtResource( 9 )]
position = Vector2( -16, -51 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -125, 349 )
current = true

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Camera2D"]
remote_path = NodePath("../../HP/HPSprite")

[node name="HP" parent="." instance=ExtResource( 11 )]

[node name="HPSprite" parent="HP" index="0"]
position = Vector2( -125, 349 )

[node name="Label" parent="HP/HPSprite" index="0"]
margin_left = -156.0
margin_top = -87.0
margin_right = -95.0
margin_bottom = -67.0

[connection signal="body_entered" from="YSort2/Hole_Ener4" to="YSort2/Hole_Ener4" method="_on_Hole_Ener4_body_entered"]
[connection signal="body_exited" from="YSort2/Hole_Ener4" to="YSort2/Hole_Ener4" method="_on_Hole_Ener4_body_exited"]

[editable path="YSort2/Hole_Ener4"]
[editable path="HP"]
